--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -1,3 +1,13 @@
+@font-face
+{
+    font-family: 'Archivo';
+    src: url('./fonts/Archivo-VariableFont_wdth,wght.ttf') format("truetype");
+    font-weight: normal;
+    font-style: normal;
+}
+.font-face-arc {
+    font-family: "Archivo";
+}
 html {
   background-color: rgb(32, 34, 37);
   color: #fff;
