--- a/src/renderer/windows/player/App.css
+++ b/src/renderer/windows/player/App.css
@@ -9,8 +9,8 @@
     font-family: "Archivo";
 }
 html {
-  background-color: rgb(32, 34, 37);
-  color: #fff;
+  /*background-color: rgb(32, 34, 37);*/
+  /*color: #fff;*/
 }
 
 body {
