--- a/src/renderer/windows/player/App.css
+++ b/src/renderer/windows/player/App.css
@@ -31,7 +31,7 @@ body {
 /*}*/
 
 .gutter {
-    background-color: #eee;
+    background-color: #3e4349;
     background-repeat: no-repeat;
     background-position: 50%;
 }
