player light theme

--- a/src/renderer/windows/player/App.css
+++ b/src/renderer/windows/player/App.css
@@ -35,18 +35,20 @@ body {
 /*}*/
 
 .gutter {
-    background-color: #3e4349;
+    background-color: rgb(var(--colors-gutterBackground));
     background-repeat: no-repeat;
     background-position: 50%;
 }
 .gutter.gutter-horizontal {
     background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAeCAYAAADkftS9AAAAIklEQVQoU2M4c+bMfxAGAgYYmwGrIIiDjrELjpo5aiZeMwF+yNnOs5KSvgAAAABJRU5ErkJggg==');
     cursor: col-resize;
+    box-shadow: 2px 0 4px 0 rgba(0, 0, 0, 0.1);
 }
 
 .gutter.gutter-vertical {
     background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAB4AAAAFAQMAAABo7865AAAABlBMVEVHcEzMzMzyAv2sAAAAAXRSTlMAQObYZgAAABBJREFUeF5jOAMEEAIEEFwAn3kMwcB6I2AAAAAASUVORK5CYII=');
     cursor: row-resize;
+    /*box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);*/
 }
 
 .out-radio-10 {
