--- a/src/renderer/windows/player/App.css
+++ b/src/renderer/windows/player/App.css
@@ -36,8 +36,8 @@ body {
     /*box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);*/
 }
 
-.out-radio-10 {
-    width: 10px;
-    height: 10px;
-    background: radial-gradient(circle at 0% 0%, transparent 10px, rgb(231 229 228) 0);
-}
+/*.out-radio-10 {*/
+/*    width: 10px;*/
+/*    height: 10px;*/
+/*    background: radial-gradient(circle at 0% 0%, transparent 10px, rgb(231 229 228) 0);*/
+/*}*/
